@@ -113,7 +113,7 @@
         <configuration>
           <source>22</source>
           <target>22</target>
-          <enablePreview>true</enablePreview>
+          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
 
@@ -257,7 +257,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.5</version>
         <configuration>
+          <!-- Activate the use of TCP to transmit events to the plugin -->
+<!--          <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>-->
           <argLine>${surefire.jacoco.args} --enable-preview</argLine>
           <trimStackTrace>false</trimStackTrace>
           <excludes>
@@ -268,6 +271,9 @@
           </includes>
           <classesDirectory>${project.build.outputDirectory}</classesDirectory>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
+<!--          <argLine>-->
+<!--            &#45;&#45;add-exports app.narvi.protego.basic/exports app.narvi.test=ALL-UNNAMED-->
+<!--          </argLine>-->
         </configuration>
       </plugin>
 
